update repo - add dealer table

--- a/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
@@ -24,7 +24,7 @@
         </div>
     }
  
-    <form class="form-horizontal m-t-20" action="/Account/Login?" method="post" novalidate data-parsley-validate id="login-form">
+    <form class="form-horizontal m-t-20" action="/Account/Login?" method="post" novalidate data-parsley-validate id="login-form" runat="server">
         @Html.AntiForgeryToken()
         <div class="form-group">
             <div class="col-xs-12">
