--- a/corelib/webApp/WebApp/WebApp/Views/Account/Settings.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Settings.cshtml
@@ -4,6 +4,7 @@
 <div class="breadcrumb-container row">
     <ol class="breadcrumb">
         <li><a href="/Home/Index?active_project=@activeProject">Home</a></li>
+        <li>Settings</li>
         <li class="active">General Settings</li>
         <li class="breadcrumb-action"><a href="#" class="btn btn-success waves-effect w-md waves-light m-b-5">Apply Changes</a></li>
     </ol>
