--- a/corelib/webApp/WebApp/WebApp/Views/Account/SystemUsers.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/SystemUsers.cshtml
@@ -7,6 +7,7 @@
     <ol class="breadcrumb">
         <li><a href="/Home/Index?active_project=@activeProject">Home</a></li>
         <li class="active">User Management</li>
+        <li>Settings</li>
         <li class="breadcrumb-action"><a href="/Account/Register?newuser=true" class="btn btn-success waves-effect w-md waves-light m-b-5">Create</a></li>
     </ol>
 </div>
