--- a/corelib/webApp/WebApp/WebApp/Content/app.css
+++ b/corelib/webApp/WebApp/WebApp/Content/app.css
@@ -80,3 +80,36 @@
 .bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
+
+/* */
+
+.text-search {
+    position: relative;
+    margin: 15px 20px 15px 10px;
+}
+
+.text-search .form-control, .text-search .form-control:focus {
+    border: none;
+    font-size: 13px;
+    color: rgba(0, 0, 0, 0.6);
+    padding-left: 20px;
+    padding-right: 40px;
+    background: rgba(117, 117, 117, 0.1);
+    box-shadow: none;
+    border-radius: 30px;
+    height: 30px;
+    width: 180px;
+}
+
+.text-search a {
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    color: rgba(130, 130, 130, 0.7);
+}
+
+.control-label .required {
+    color: #e02222 !important;
+    font-size: 12px !important;
+    padding-left: 2px !important;
+}
