--- a/corelib/webApp/WebApp/WebApp/Views/Acquisition/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Acquisition/Index.cshtml
@@ -20,7 +20,7 @@
             </p>
             <div class="row">
                 <div class="col-sm-12">
-                    <table id="request-table" class="datatable-custom table table-hover  dataTable no-footer" role="grid" aria-describedby="datatable_info">
+                    <table id="request-table" class="datatable-custom table table-hover dataTable no-footer" role="grid" aria-describedby="datatable_info">
                         <thead>
                             <tr role="row">
                                 <th>Request Type</th>
@@ -87,22 +87,11 @@
 
     <script>
 
-        getUrlVars = function () {
-            var vars = [], hash;
-            var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-            for (var i = 0; i < hashes.length; i++) {
-                hash = hashes[i].split('=');
-                vars.push(hash[0]);
-                vars[hash[0]] = hash[1];
-            }
-            return vars;
-        }
-
         $(document).ready(function () {
 
-            TableManageButtons.init("acquisition_request");
+            TableManageButtons.init("to_datatable");
 
-            if (getUrlVars()["emailSent"] == "true")
+            if ($getUrlVars()["emailSent"] == "true")
                 $.Notification.notify('success', 'bottom right', 'An e-mail notification has been sent to you and to related people. Please check your inbox to proceed.')
             else
                 $.Notification.notify('white', 'bottom right', 'System Vehicle Requests', 'Here you can view, submit and update vehicle requests/acquisition forms');
