--- a/corelib/webApp/WebApp/WebApp/Views/Acquisition/createEditAcquisition.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Acquisition/createEditAcquisition.cshtml
@@ -225,7 +225,6 @@
 
         acquisition.init();
 
-
         $.summernote.addPlugin({
             name: 'myenter',
             events: {
@@ -234,7 +233,7 @@
 
                     // custom enter key
                     var newLine = '<br />';
-                    pasteHtmlAtCaret(newLine);
+                    $pasteHtmlAtCaret(newLine);
 
                     // to stop default event
                     event.preventDefault();
@@ -245,50 +244,10 @@
         $('#justifications').code("");
         $('#additional_notes').code("");
 
-        //var code = $('#justifications').code(),
-        //    code2 = $('#additional_notes').code(),
-        //filteredContent = $(code).text().replace(/\s+/g, ''),
-        //filteredContent2 = $(code2).text().replace(/\s+/g, '');
-
         $('#justifications').summernote('editor.pasteHTML', $.parseHTML("@justifications")[0].data);
         $('#additional_notes').summernote('editor.pasteHTML', $.parseHTML("@additional_notes")[0].data);
 
     });
-
-    function pasteHtmlAtCaret(html) {
-        var sel, range;
-        if (window.getSelection) {
-            // IE9 and non-IE
-            sel = window.getSelection();
-            if (sel.getRangeAt && sel.rangeCount) {
-                range = sel.getRangeAt(0);
-                range.deleteContents();
-
-                // Range.createContextualFragment() would be useful here but is
-                // only relatively recently standardized and is not supported in
-                // some browsers (IE9, for one)
-                var el = document.createElement("div");
-                el.innerHTML = html;
-                var frag = document.createDocumentFragment(), node, lastNode;
-                while ((node = el.firstChild)) {
-                    lastNode = frag.appendChild(node);
-                }
-                range.insertNode(frag);
-
-                // Preserve the selection
-                if (lastNode) {
-                    range = range.cloneRange();
-                    range.setStartAfter(lastNode);
-                    range.collapse(true);
-                    sel.removeAllRanges();
-                    sel.addRange(range);
-                }
-            }
-        } else if (document.selection && document.selection.type != "Control") {
-            // IE < 9
-            document.selection.createRange().pasteHTML(html);
-        }
-    }
 
     </script>
 }
