--- a/corelib/webApp/WebApp/WebApp/Views/Account/SystemUsers.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/SystemUsers.cshtml
@@ -67,7 +67,7 @@
 
         $(document).ready(function () {
 
-            TableManageButtons.init("system_users");
+            TableManageButtons.init("with_export_btn");
             $.Notification.notify('white', 'bottom right', 'Manage System users', 'Here you can view, create and update system users and thier access rights.');
 
         });
