--- a/corelib/webApp/WebApp/WebApp/Views/Dealers/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Dealers/Index.cshtml
@@ -9,6 +9,7 @@
         <li class="breadcrumb-action">
             <a data-toggle="tooltip" data-placement="left" data-original-title="Create new supplier" href="#" class="btn btn-success waves-effect w-md waves-light m-b-5" id="add-new-dealer">Add</a>
             <a style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Update new supplier" href="#" class="btn btn-success waves-effect w-md waves-light m-b-5" id="update-dealer">Apply Changes</a>
+            <button style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Refresh to revert changes" type="button" class="btn btn-default waves-effect w-md m-b-5" id="refresh-dealer">Refresh</button>
         </li>
     </ol>
 </div>
@@ -30,7 +31,7 @@
 
     </div>
 
-    <div id="dealerInfoContainer"></div>
+    <div class="" id="dealerInfoContainer"></div>
 </div>
 
 @section scripts{
@@ -41,7 +42,7 @@
 
         $(function () {
             
-            TableManageButtons.init("to_datatable");
+            TableManageButtons.init("with_export_btn");
 
         })
 
