--- a/corelib/webApp/WebApp/WebApp/Views/Dealers/dealers.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Dealers/dealers.cshtml
@@ -9,61 +9,66 @@
     var attachment = Model.getDealerAttachment;
 
 }
+
 <form action="#" data-parsley-validate="" novalidate="" id="add-edit-dealers">
-    <div class="col-lg-4 card-box table-responsive">
-        <h4 class="m-t-0 header-title"><b>Dealer's Info</b></h4>
-        <p class="text-muted font-13 m-b-30">
-            Create / Edit Dealer's Info
-        </p>
-        <div class="col-md-12">
 
-            <div class="form-group">
+    <div class="col-lg-4 ">
+        <div class="card-box table-responsive">
+            <h4 class="m-t-0 header-title"><b>Dealer's Info</b></h4>
+            <p class="text-muted font-13 m-b-30">
+                Create / Edit Dealer's Info
+            </p>
+            <div class="col-md-12">
 
-                @{ var dealerRefCode = ((@dealers != null) ? @dealers.DealerRefCode : string.Empty); }
-                @{ var id = ((@dealers != null) ? @dealers.id : 0); }
+                <div class="form-group">
 
-                <input type="hidden" class="form-control" name="DealerRefCode" value="@dealerRefCode">
-                <input type="hidden" class="form-control" name="id" value="@id">
-                <input type="hidden" class="form-control" name="deleted_files" id="dealer_deleted_files" value="" />
+                    @{ var dealerRefCode = ((@dealers != null) ? @dealers.DealerRefCode : string.Empty); }
+                    @{ var id = ((@dealers != null) ? @dealers.id : 0); }
 
-                @{ var DealerNo = ((@dealers != null) ? @dealers.DealerNo : string.Empty); }
+                    <input type="hidden" class="form-control" name="DealerRefCode" value="@dealerRefCode">
+                    <input type="hidden" class="form-control" name="id" value="@id">
+                    <input type="hidden" class="form-control" name="deleted_files" id="dealer_deleted_files" value="" />
 
-                <label class="control-label">Dealer No : <span class="required">*</span></label>
-                <input type="text" class="form-control" placeholder="" name="DealerNo" value="@DealerNo">
+                    @{ var DealerNo = ((@dealers != null) ? @dealers.DealerNo : string.Empty); }
 
-            </div>
-            <div class="form-group">
-                @{ var Name = ((@dealers != null) ? @dealers.Name : string.Empty); }
-                <label class="control-label">Dealer Name : <span class="required">*</span></label>
-                <input type="text" class="form-control" name="Name" value="@Name">
-            </div>
-            <div class="form-group">
-                @{ var Address = ((@dealers != null) ? @dealers.Address : string.Empty); }
-                <label class="control-label">Mailing Address : <span class="required">*</span></label>
-                <textarea class="form-control" name="Address" rows="4">@Address</textarea>
-            </div>
-            <div class="form-group">
-                @{ var PostalCode = ((@dealers != null) ? @dealers.PostalCode : string.Empty); }
-                <label class="control-label">Postal Code : <span class="required">*</span></label>
-                <input type="text" class="form-control" name="PostalCode" value="@PostalCode">
-            </div>
-            <div class="form-group">
-                @{ var Phone = ((@dealers != null) ? @dealers.Phone : string.Empty); }
-                <label class="control-label">Phone No : <span class="required">*</span></label>
-                <input type="text" class="form-control" name="Phone" value="@Phone">
-            </div>
-            <div class="form-group">
-                @{ var Email = ((@dealers != null) ? @dealers.Email : string.Empty); }
-                <label class="control-label">Email: <span class="required">*</span></label>
-                <input type="text" class="form-control" name="Email" value="@Email">
-            </div>
-            <div class="form-group">
-                @{ var Fax = ((@dealers != null) ? @dealers.Fax : string.Empty); }
-                <label class="control-label">Fax : <span class="required">*</span></label>
-                <input type="text" class="form-control" name="Fax" value="@Fax">
+                    <label class="control-label">Dealer No : <span class="required">*</span></label>
+                    <input type="text" class="form-control" placeholder="" name="DealerNo" value="@DealerNo" required="">
+
+                </div>
+                <div class="form-group">
+                    @{ var Name = ((@dealers != null) ? @dealers.Name : string.Empty); }
+                    <label class="control-label">Dealer Name : <span class="required">*</span></label>
+                    <input type="text" class="form-control" name="Name" value="@Name" required="">
+                </div>
+                <div class="form-group">
+                    @{ var Address = ((@dealers != null) ? @dealers.Address : string.Empty); }
+                    <label class="control-label">Mailing Address : <span class="required">*</span></label>
+                    <textarea class="form-control" name="Address" rows="4" required="">@Address</textarea>
+                </div>
+                <div class="form-group">
+                    @{ var PostalCode = ((@dealers != null) ? @dealers.PostalCode : string.Empty); }
+                    <label class="control-label">Postal Code : <span class="required">*</span></label>
+                    <input type="text" class="form-control" name="PostalCode" value="@PostalCode" required="">
+                </div>
+                <div class="form-group">
+                    @{ var Phone = ((@dealers != null) ? @dealers.Phone : string.Empty); }
+                    <label class="control-label">Phone No : <span class="required">*</span></label>
+                    <input type="text" class="form-control" name="Phone" value="@Phone" required="">
+                </div>
+                <div class="form-group">
+                    @{ var Email = ((@dealers != null) ? @dealers.Email : string.Empty); }
+                    <label class="control-label">Email: <span class="required">*</span></label>
+                    <input type="email" class="form-control" name="Email" value="@Email" required="">
+                </div>
+                <div class="form-group">
+                    @{ var Fax = ((@dealers != null) ? @dealers.Fax : string.Empty); }
+                    <label class="control-label">Fax : <span class="required">*</span></label>
+                    <input type="text" class="form-control" name="Fax" value="@Fax" required="">
+                </div>
             </div>
         </div>
     </div>
+    
     <div class="col-lg-8">
         <div class="clearfix">
 
@@ -92,7 +97,6 @@
                         <span class="hidden-xs">Others</span>
                     </a>
                 </li>
-                <div class="indicator" style="right: 637px; left: 0px;"></div>
             </ul>
             <div class="tab-content clearfix">
                 <div class="row tab-pane active" id="data_tab">
@@ -107,17 +111,17 @@
                                     <div class="form-group">
                                         @{ var OPCName = ((@dealers != null) ? @dealers.OPCName : string.Empty); }
                                         <label class="control-label">Name : <span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="OPCName" value="@OPCName">
+                                        <input type="text" class="form-control" name="OPCName" value="@OPCName" required="">
                                     </div>
                                     <div class="form-group">
                                         @{ var OPCPhone = ((@dealers != null) ? @dealers.OPCPhone : string.Empty); }
                                         <label class="control-label">Phone No. : <span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="OPCPhone" value="@OPCPhone">
+                                        <input type="text" class="form-control" name="OPCPhone" value="@OPCPhone" required="">
                                     </div>
                                     <div class="form-group">
                                         @{ var OPCEmail = ((@dealers != null) ? @dealers.OPCEmail : string.Empty); }
                                         <label class="control-label">Email Add : <span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="OPCEmail" value="@OPCEmail">
+                                        <input type="email" class="form-control" name="OPCEmail" value="@OPCEmail" required="">
                                     </div>
                                     <div class="form-group">
                                         @{ var OPCFax = ((@dealers != null) ? @dealers.OPCFax : string.Empty); }
@@ -137,7 +141,7 @@
                                     <div class="form-group">
                                         @{ var Person1 = ((@dealers != null) ? @dealers.Person1 : string.Empty); }
                                         <label class="control-label">Person 1 : <span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="Person1" value="@Person1">
+                                        <input type="text" class="form-control" name="Person1" value="@Person1" required="">
                                     </div>
                                     <div class="form-group">
                                         @{ var Person2 = ((@dealers != null) ? @dealers.Person2 : string.Empty); }
@@ -157,7 +161,7 @@
                                 </div>
                             </div>
                         </div>
-
+                        @*panel panel-default*@
                         <div class="col-lg-12">
                             <div class="panel panel-color panel-primary">
                                 <div class="panel-heading">
@@ -168,7 +172,7 @@
                                         <div class="form-group">
                                             @{ var FPCName = ((@dealers != null) ? @dealers.FPCName : string.Empty); }
                                             <label class="control-label">Name : <span class="required">*</span></label>
-                                            <input type="text" class="form-control" name="FPCName" value="@FPCName">
+                                            <input type="text" class="form-control" name="FPCName" value="@FPCName" required="">
                                         </div>
                                         <div class="form-group">
                                             @{ var FPCEmail = ((@dealers != null) ? @dealers.FPCEmail : string.Empty); }
@@ -195,7 +199,7 @@
 
                 </div>
                 <div class="tab-pane" id="provided_vehicle_tab">
-                    <table class="table table-striped table-hover" cellpadding="0" cellspacing="0">
+                    <table class="datatable-responsive table table-hover dataTable no-footer dtr-inline" cellpadding="0" cellspacing="0">
                         <thead>
                             <tr class="table-header">
                                 <th>
@@ -231,12 +235,6 @@
                                         </tr>
                                     }
                                 }
-                                else
-                                {
-                                    <tr class="">
-                                        <td colspan="10" style="color:#c0392b" align="center" valign="middle"> No Records Found!</td>
-                                    </tr>
-                                }
                             }
 
                         </tbody>
@@ -244,7 +242,59 @@
 
                 </div>
                 <div class="tab-pane" id="attachement_tab">
+                    @if (dealers == null)
+                    {
+                        <div class="alert alert-warning">
+                            <strong>Heads up! </strong>You can only attach file to an exsiting record!
+                        </div>
+                    }
+                    else { 
+                        <table class="datatable-responsive table table-hover dataTable no-footer dtr-inline" id="dealer_providers_table">
+                            <thead>
+                                <tr class="table-header">
+                                    <th>
+                                        File Name
+                                    </th>
+                                    <th align="center">
+                                        File Size (Kb)
+                                    </th>
+                                    <th align="center">
+                                        Description
+                                    </th>
+                                    <th align="center">
+                                        Action
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
+                                @{
+                                    if (attachment != null && attachment.Count() > 0)
+                                    {
+                                        foreach (var item in attachment)
+                                        {
+
+                                            var path = item.file_source_location + item.FileName;
+                                            var toDelete = item.DealerAttID + "`" + item.FileName + "`" + path;
+                                        
+                                            var image = "./Content/files/" + @item.FileName;
+                                        
+                                            <tr>
+                                                <td align="left" valign="middle"><a rel="popover" data-img="@image" class="file-download" style="cursor:pointer;">@item.FileName</a></td>
+                                                <td valign="middle" style="white-space: normal;">@item.FileSize </td>
+                                                <td valign="middle" style="white-space: normal;">@item.Description</td>
+                                                <td valign="middle" style="white-space: normal;">
+                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Remove File" href="#" class="dealer-collect-file btn btn-icon waves-effect waves-light btn-danger" id="@toDelete"><i class="fa fa-times"></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Download File" href="@Url.Action("downloadFile", "Dealers", new { path = path })" class="btn btn-icon waves-effect waves-light btn-default"><i class="md-file-download"></i></a>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                }
+
+                            </tbody>
+                        </table>
+                    }
                 </div>
                 <div class="tab-pane" id="others_tab">
 
@@ -253,8 +303,51 @@
         </div>
     </div>
 </form>
-    <script>
-        $(document).ready(function () {
-            $('ul.tabs').tabs();
+
+<script src="~/Scripts/app/dealers.js"></script>
+<script>
+
+    $(document).ready(function () {
+
+        $('ul.tabs').tabs();
+
+        TableManageButtons.init("responsive_table");
+
+        // attachment custom toolbar
+        $('<button style="margin-top: 4px" type="button" data-toggle="tooltip" data-placement="left" data-original-title="Upload new file" class="add-attachment btn btn-primary waves-effect waves-light btn-sm m-b-5"><i class="fa fa-plus"></i></button>').appendTo('#dealer_providers_table_filter');
+    
+        $('.add-attachment').on('click', function (e) {
+
+            e.stopImmediatePropagation();
+
+            $loadPartialView("./Dealers/addEditAttachment", function (data) {
+
+                $('#custom-modal .custom-modal-text').empty();
+                $('#custom-modal .custom-modal-text').html(data);
+                $('#custom-modal .custom-modal-title').text('Dealer Attachment');
+
+                Custombox.open({
+                    target: '#custom-modal',
+                    effect: 'door',
+                    plugin: 'custommodal',
+                    overlayspeed: 100,
+                    overlaycolor: '#36404a'
+                });
+
+                e.preventDefault();
+
+            }, {})
+
+        })
+
+        $('[data-toggle="tooltip"]').tooltip();
+        $('a[rel=popover]').popover({
+            html: true,
+            trigger: 'hover',
+            placement: 'top',
+            content: function () { return '<img class="img-responsive" src="' + $(this).data('img') + '" />'; }
         });
-    </script>
+
+    });
+
+</script>
