--- a/corelib/webApp/WebApp/WebApp/Views/Shared/_Layout.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="~/Content/theme/images/favicon.ico" type="image/x-icon">
 
     <link href="~/Content/theme/css/custombox.min.css" rel="stylesheet" />
-    }
+    
     <link href="~/Content/theme/css/sweetalert.css" rel="stylesheet" />
 
     @RenderSection("css", required: false)
@@ -210,15 +210,7 @@
                         </li>
 
                         <li class="has-submenu  last-elements">
-                            <a href="#"><i class="md md-folder-special"></i>Dealers</a>
-                            <ul class="submenu megamenu">
-                                <li>
-                                    <ul>
-                                        <li><a href="#" class="get-one-dealer">Create New</a></li>
-                                        <li><a href="/Dealers" class="dealers">Dealer's Table</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            <a href="/Dealers"><i class="md md-folder-special"></i>Dealers</a>
                         </li>
                         
                         <li class="has-submenu">
@@ -305,8 +297,16 @@
     </div>
     <!-- End wrapper -->
 
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @*@Scripts.Render("~/Content/js")*@
+    <!-- Custom Modal -->
+    <div id="custom-modal" class="modal-demo">
+        <button type="button" class="close" onclick="Custombox.close();">
+            <span>×</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="custom-modal-title"></h4>
+        <div class="custom-modal-text clearfix">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </div>
+    </div>
 
     <script src="~/Content/theme/js/jquery.min.js"></script>
     <script src="~/Content/theme/js/bootstrap.min.js"></script>
@@ -323,7 +323,8 @@
     <script src="~/Scripts/app/generic.js"></script>
 
     <script src="~/Scripts/plugins/custombox.min.js"></script>
-    
+    <script src="~/Scripts/plugins/legacy.min.js"></script>
+
     <script src="~/Scripts/plugins/sweetalert.min.js"></script>
     <script src="~/Scripts/plugins/notify.min.js"></script>
     <script src="~/Scripts/app/notify-metro.js"></script>
